<resources>
    <string name="app_name">Clip Sync</string>
    <string name="support_url">https://github.com/aubynsamuel/clipsync-android/issues</string>
    <string name="windows_companion_app">https://github.com/aubynsamuel/clipsync-windows/releases</string>

    <string name="buy_me_a_coffee">https://www.buymeacoffee.com/aubynsamuel</string>
    <string name="sourceCode">https://github.com/aubynsamuel/clipsync-android</string>

    <string name="widget_description">A widget to quickly share your clipboard.</string>
    <string name="loading_clip_sync">Loading ClipSync</string>
    <string name="start">Start</string>
    <string name="button">Button</string>
    <string name="clip_sync">ClipSync</string>
    <string name="share"> Share </string>

    <string name="samsung_galaxy_s24">Samsung S24</string>
    <string name="desktop_grptu23o34">Desktop-GTU98</string>
    <string name="pixel_8_pro">Pixel 8 Pro</string>
    <string name="image_description">WidgetPreview Image\n</string>
</resources>
